--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -172,6 +172,7 @@
 	border-top: solid 1px #E5E5E5;
     padding: 25px 0 5px 0;
     color: whitesmoke;
+	font-size: 14px;
 }
 .wui-surveyDescription img{
 	padding-top:10px;
