--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -82,13 +82,43 @@
             <div class="wui-i-settingData xa-settingData fl mb10">
                 <ul>
                     <li data_cid="4">
-                        一等奖:&nbsp;&nbsp;<b>{% if component.components.0.model.prize.type == 'coupon' %}{{component.components.0.model.prize.data.name}}{% else %}{{component.components.0.model.prize.data}}{% endif %}</b>
+                        一等奖:&nbsp;&nbsp;
+                        {% if component.components.0.model.prize.type == 'coupon' %}
+                            <strong>优惠券</strong>:<b>{{component.components.0.model.prize.data.name}}</b>
+                        {% else %}
+                            {% if component.components.0.model.prize.type == 'integral' %}
+                                <strong>积分</strong>
+                            {% else %}
+                                <strong>实物</strong>
+                            {% endif %}
+                            :<b>{{component.components.0.model.prize.data}}</b>
+                        {% endif %}
                     </li>
                     <li data_cid="5">
-                        二等奖:&nbsp;&nbsp;<b>{% if component.components.1.model.prize.type == 'coupon' %}{{component.components.1.model.prize.data.name}}{% else %}{{component.components.1.model.prize.data}}{% endif %}</b>
+                        二等奖:&nbsp;&nbsp;
+                        {% if component.components.1.model.prize.type == 'coupon' %}
+                            <strong>优惠券</strong>:<b>{{component.components.1.model.prize.data.name}}</b>
+                        {% else %}
+                            {% if component.components.1.model.prize.type == 'integral' %}
+                                <strong>积分</strong>
+                            {% else %}
+                                <strong>实物</strong>
+                            {% endif %}
+                            :<b>{{component.components.1.model.prize.data}}</b>
+                        {% endif %}
                     </li>
                     <li data_cid="6">
-                        三等奖:&nbsp;&nbsp;<b>{% if component.components.2.model.prize.type == 'coupon' %}{{component.components.2.model.prize.data.name}}{% else %}{{component.components.2.model.prize.data}}{% endif %}</b>
+                        三等奖:&nbsp;&nbsp;
+                        {% if component.components.2.model.prize.type == 'coupon' %}
+                            <strong>优惠券</strong>:<b>{{component.components.2.model.prize.data.name}}</b>
+                        {% else %}
+                            {% if component.components.2.model.prize.type == 'integral' %}
+                                <strong>积分</strong>
+                            {% else %}
+                                <strong>实物</strong>
+                            {% endif %}
+                            :<b>{{component.components.2.model.prize.data}}</b>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
