[update] BUG 4363 样式问题手机端[购物时]订单商品状态发生变化框中,滚动不了了

--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -1714,6 +1714,9 @@ input.ui-input-text, textarea.ui-input-text {
 /*.xui-editOrderPage .xui-selectedProductList li:first-child{
     padding-top:0;
 }*/
+.xui-editOrderPage .xui-cantBuyList .xui-productThumbNail{
+    height:50px;
+}
 .xui-editOrderPage .xui-productThumbNail,
 .xui-payOrderPage .xui-productThumbNail{
     width: 50px;
