--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
@@ -462,7 +462,7 @@
         <div class="xui-i-box">
             <h2 class="xa-cantBuyElement">该订单内商品状态发生变化！</h2>
             <h2 class="hidden">以下赠品库存不足或已赠完！</h2>
-            <div class="xui-cantBuyList" style="">
+            <div class="xui-cantBuyList" style="" id="cantBuyWrapper">
                 <ul class="clearStyle"><!-- 商品循环li -->
                     <li class="xa-product-not-buy disT xui-i-padding w">
                         <div class="disTc xui-productThumbNail pr">
@@ -611,7 +611,6 @@ if (/ipad|iphone|mac/i.test(navigator.userAgent)){
     function loaded() {
         var myScroll = new iScroll('wrapper', { checkDOMChanges: true});
         var myscroll = new iScroll('xa-wrapper',{hScrollbar:false});
-
     }
     $('.xui-editOrderPage .xui-form').css('padding-bottom','0px');
     document.addEventListener('touchmove', function (e) { e.preventDefault(); }, false);
