--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -216,6 +216,7 @@
             W.isPC = {% if isPC %}true{% else %}false{% endif %};
             W.isMember = {% if isMember %}true{% else %}false{% endif %};
             W.qrcodeUrl = "{{ auth_appid_info.qrcode_url }}";
+            W.permission = "{{ permission }}";
             if(W.sharePageImg.substr(0,7)!="http://" && W.sharePageImg.substr(0,8)!="https://")
             W.sharePageImg = "http://"+window.location.host+W.sharePageImg;
             var link = window.location.href;
@@ -394,44 +395,37 @@
                             'url': 'm/apps/'+W.appName+'/result_vote/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&member_id={{ member_id }}'
                         }]);
                     }
-                    W.getApi().call({
-                        app: 'm/apps/'+W.appName,
-                        resource: W.resource+'_participance',
-                        method: 'put',
-                        args: participanceData,
-                        success: function(data) {
-                            $('body').alertParticipantResult({prize: data.prize,actionButtons: data.actionButtons});
-                            var $button = $submitButtonContainer.find('.xa-submitTermite');
-                            $button.text('您已参加过该活动');
-                            $('.xa-submitTermite').unbind('click');
-                            $button.removeClass('xa-submitTermite').removeClass('xui-btn-danger').addClass('xui-btn-disable');
-
-                            /*
-                            $('body').alert({
-                                isShow: true,
-                                isSlide: true,
-                                info: '参与成功',
-                                speed: 3000,
+{#                        必须关注才可以参与的活动#}
+                    if (W.permission == 'member'){
+                        if (W.isMember == true){
+                            W.getApi().call({
+                                app: 'm/apps/'+W.appName,
+                                resource: W.resource+'_participance',
+                                method: 'put',
+                                args: participanceData,
+                                success: function(data) {
+                                    $('body').alertParticipantResult({prize: data.prize,actionButtons: data.actionButtons});
+                                    var $button = $submitButtonContainer.find('.xa-submitTermite');
+                                    $button.text('您已参加过该活动');
+                                    $('.xa-submitTermite').unbind('click');
+                                    $button.removeClass('xa-submitTermite').removeClass('xui-btn-danger').addClass('xui-btn-disable');
+                                    },
+                                error: function(resp) {
+                                    $('body').alert({
+                                        isShow: true,
+                                        isSlide: true,
+                                        info: '参与失败，请稍后再试！',
+                                        speed: 3000,
+                                    });
+                                }
                             });
-                            */
-                            },
-                        error: function(resp) {
-                            $('body').alert({
-                                isShow: true,
-                                isSlide: true,
-                                info: '参与失败，请稍后再试！',
-                                speed: 3000,
-                            });
+                        }else{
+                            $('body').html('<div class="wui-appParticipantResult-Cover"><div class="wui-qrcode">' +
+                            '<img height="195px" width="195px" src="'+ W.qrcodeUrl+'">' +
+                            '</div><div></div>');
                         }
-                    });
+                    }
 
-                    /*
-                    $('body').alert({
-                        isShow: true,
-                        isSlide: true,
-                        info: JSON.stringify(data)
-                    });
-                    */
                 });
                 }
             });
